# ra-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  DEBUGGING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cliff.toml  dagger.json  makefile  marketplace.json  mkdocs.yml  pyproject.toml  results.sarif  test-provenance.intoto.jsonl  test-sbom.spdx.json  test_requests.py  todo.md  zensical.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: commit.md
.claude/hooks/: hooks.json
.claude/skills/add-mcp-package/: SKILL.md
.claude/skills/htr-transcription/: SKILL.md
.claude/skills/ra-mcp-apps/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/zensical-setup/: SKILL.md
.dagger/: attest.go  build.go  checks.go  compose.go  go.mod  main.go  publish.go  scan.go  serve.go  telemetry.go  test.go
.docker/: docker-compose.yml  hf.dockerfile  ra-mcp.dockerfile
.github/: ATTESTATIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/workflows/: checks.yml  ci.yml  codeql.yml  docs.yml  publish-slsa-l3.yml  publish-with-attestations.yml  publish.yml  release.yml  scorecard.yml  sync_to_hub.yml  trufflehog.yml
.specify/memory/: constitution.md
assets/: index.html
assets/markdown/: 00_Register.md  06_Statskyrkan.md  10_Bergsbruk.md  11_Fiske.md  18_Lantbruk.md  25_Invandring.md  35_Pension.md  40_Brand_Civilforsvar.md  43_Kultur.md
charts/ra-mcp/: Chart.yaml  values.yaml
charts/ra-mcp/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml
dashboards/: grafana-ra-mcp.json  openobserve-ra-mcp.json
docs/: architecture-diagrams.md  index.md
docs/api/: browse.md  common.md  index.md  mcp-tools.md  search.md
docs/architecture/: index.md
docs/assets/: index.html
docs/cli/: browse.md  index.md  search.md  serve.md
docs/deployment/: index.md
docs/development/: deployment.md  index.md  observability.md  security.md
docs/getting-started/: index.md  local.md  plugins.md
docs/how-it-works/: architecture.md  data-sources.md  index.md
docs/notebooks/: test.py
docs/plans/: 2026-04-01-sbl-mcp-design.md  2026-04-12-tora-mcp-design.md  2026-04-12-tora-mcp-plan.md
docs/resources/: 00_Innehallsforteckning.md  02_Fangelse.md  04_Stadens_Forvaltning.md  27_Djur.md  32_Forsorjning.md  38_Nykterhet.md  41_Energi.md
docs/superpowers/plans/: 2026-04-01-diplomatics-viewer-integration.md
docs/tools/: index.md  skills.md  tools.md
gradio/: client.py
htr_gradio/: 451511_1512_01_alto.xml  451511_1512_01_page.xml  client.py  client_new.py  gradio_htrflow.py  iiif_docs.py  pyproject.toml  simple_mcp_server.py  visualizer copy.py  visualizer.py
markdown/: 03_Skatt.md  05_Lan.md  09_Lantmateri.md  12_Skog.md  14_Sjofart.md  15_Vagar.md  16_Tillverkning.md  17_Handel.md  19_Skola.md  20_Fattig_Socialtjanst.md  21_Kommun.md  22_Landsting.md  23_Omsorg.md  24_Polis.md  28_Posten.md  30_Tele.md  31_Byggnader.md  33_Barn_Ungdom.md  36_Rattshjalp.md  37_Overvakning.md  39_Arbete.md  42_Luftfart.md  44_Internadministration.md  45_Studiestod.md  46-61_Forsvaret.md  99_Litteratur.md
overrides/partials/integrations/analytics/: custom.html
plugins/.claude-plugin/: marketplace.json
plugins/ra-mcp-dev/: README.md
plugins/ra-mcp-dev/.claude-plugin/: plugin.json
plugins/ra-mcp-tools/: README.md
plugins/ra-mcp-tools/.claude-plugin/: plugin.json
plugins/ra-mcp-tools/skills/archival-guide/: SKILL.md
plugins/ra-mcp-tools/skills/archive-research/: SKILL.md
plugins/ra-mcp-tools/skills/archive-search/: SKILL.md
plugins/ra-mcp-tools/skills/feedback-ls/: SKILL.md
plugins/ra-mcp-tools/skills/htr-transcription/: SKILL.md
plugins/ra-mcp-tools/skills/pdf-guide/: SKILL.md  hur-riket-styrdes.md  medeltid.md  samisk-historia.md
ra-mcp/.specify/memory/: constitution.md
resource/: iiif.md
resources/: 00_Inledning.md  00_Innehallsforteckning.md  01_Domstolar.md  02_Fangelse.md  05_Lan.md  07_Folkbokforing.md  08_Tull.md  09_Lantmateri.md  11_Fiske.md  13_Sjukvard.md  16_Tillverkning.md  17_Handel.md  23_Omsorg.md  26_Halsa_Miljo.md  28_Posten.md  29_Jarnvagen.md  32_Forsorjning.md  34_Modrahjalp.md  37_Overvakning.md  38_Nykterhet.md  40_Brand_Civilforsvar.md  42_Luftfart.md  44_Internadministration.md  99_Litteratur.md
scripts/: ingest_aktiebolag.py  ingest_court.py  ingest_dds.py  ingest_diplomatics.py  ingest_faltjagare.py  ingest_filmcensur.py  ingest_rosenberg.py  ingest_sbl.py  ingest_sj.py  ingest_sjomanshus.py  ingest_specialsok.py  ingest_suffrage.py  ingest_wincars.py
specs/001-researchers-historians-and/: plan.md  quickstart.md  spec.md  tasks.md
src/oxenstierna/: __init__.py  gradio_htrflow.py  htr_server.py  iiif_client.py  iiif_server.py  search_server.py  server.py
src/oxenstierna/ra_api/: api_models.py  base_client.py  helpers.py  iiif_client.py  search_client.py
src/ra_mcp/: __init__.py  __main__.py  cache.py  config.py  core.py  formatters.py  hf_tools.py  mcp_tools.py  models.py  ra_core.py  ra_tools.py  search_tools.py  server.py
src/ra_mcp/cli/: __init__.py  cli.py  cli_progress.py  commands.py  main.py  oai_pmh_harvester.py  old_oai_pmh_harvester.py
src/ra_mcp/clients/: __init__.py  alto_client.py  iiif_client.py  oai_pmh_client.py  search_client.py
src/ra_mcp/formatters/: __init__.py  base_formatter.py  mcp_formatter.py  plain_formatter.py  rich_formatter.py  utils.py
src/ra_mcp/services/: __init__.py  analysis.py  base_display_service.py  browse_display_service.py  browse_operations.py  cli_display_service.py  display_service.py  mcp_display_service.py  page_context_service.py  search_display_service.py  search_enrichment_service.py  search_operations.py  unified_display_service.py
src/ra_mcp/utils/: __init__.py  http_client.py  page_utils.py  url_generator.py
src/ra_mcp_server/: __init__.py  server.py  telemetry.py
src/ra_mcp_server/cli/: __init__.py  app.py
tests/: test_server.py
tools/: README.md  _scrape_markdown_convert.py  ra.py
(+5 files in other folders)
