[project]
name = "ra-mcp"
version = "0.5.3"
description = "Riksarkivet MCP server composition and CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ra-mcp-search-mcp",
    "ra-mcp-browse-mcp",
    "ra-mcp-guide-mcp",
    "starlette>=0.52.1",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "cryptography>=46.0.5",
]

license = "Apache-2.0"
keywords = [
    "mcp",
    "mcp server",
    "model context protocol",
    "ra-mcp",
    "search",
    "browse",
    "iiif",
    "llm",
    "agent",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.optional-dependencies]
cli = [
    "ra-mcp-search-cli",
    "ra-mcp-browse-cli",
]


[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "ra-mcp-search-cli",
    "ra-mcp-browse-cli",
]

[project.scripts]
ra = "ra_mcp_server.cli:app"
ra-serve = "ra_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ra_mcp_server"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
ra-mcp-common = { workspace = true }
ra-mcp-search = { workspace = true }
ra-mcp-search-cli = { workspace = true }
ra-mcp-search-mcp = { workspace = true }
ra-mcp-browse = { workspace = true }
ra-mcp-browse-cli = { workspace = true }
ra-mcp-browse-mcp = { workspace = true }
ra-mcp-guide-mcp = { workspace = true }

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (unused imports, undefined names)
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # bugbear (common pitfalls)
    "S",      # bandit (security)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "C901",   # mccabe complexity
]
ignore = [
    "E501",   # line-too-long — MCP tool docstrings are intentionally long for LLM context
    "S104",   # bind-all-interfaces — intentional for server
    "S310",   # url-open — http_client's purpose is to open URLs
    "S110",   # try-except-pass — acceptable in shutdown/cleanup code
    "S314",   # xml-parse — XML from Riksarkivet APIs is trusted; defusedxml is a separate decision
    "SIM108", # ternary — if/else blocks are often more readable
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["ra_mcp_common", "ra_mcp_search", "search_cli", "search_mcp", "ra_mcp_browse", "browse_cli", "browse_mcp", "guide_mcp", "ra_mcp_server"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.12"


[tool.pytest.ini_options]
markers = []
testpaths = ["packages/*/tests"]
